After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 672548 - g_utf8_validate: @str shouldn't end up annotated as utf8
g_utf8_validate: @str shouldn't end up annotated as utf8
Status: RESOLVED FIXED
Product: gobject-introspection
Classification: Platform
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: gobject-introspection Maintainer(s)
gobject-introspection Maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2012-03-21 13:24 UTC by Dan Winship
Modified: 2015-02-07 17:02 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
g_utf8_validate: @str shouldn't end up annotated as utf8 (966 bytes, patch)
2012-03-21 13:24 UTC, Dan Winship
committed Details | Review

Description Dan Winship 2012-03-21 13:24:22 UTC
right?
Comment 1 Dan Winship 2012-03-21 13:24:24 UTC
Created attachment 210230 [details] [review]
g_utf8_validate: @str shouldn't end up annotated as utf8

In order for this function to have any point, it has to be possible to
pass non-UTF-8 data to it, so annotate @str as being array-of-guint8
instead of utf8.
Comment 2 Dan Winship 2012-03-21 13:25:41 UTC
(and maybe we should have (type bytestring) or something as an alias for that?)
Comment 3 Colin Walters 2012-03-21 13:30:24 UTC
Review of attachment 210230 [details] [review]:

Looks correct.
Comment 4 Dan Winship 2012-05-18 16:37:40 UTC
belatedly pushed

Attachment 210230 [details] pushed as 7cadf4f - g_utf8_validate: @str shouldn't end up annotated as utf8
Comment 5 André Klapper 2015-02-07 17:02:37 UTC
[Mass-moving gobject-introspection tickets to its own Bugzilla product - see bug 708029. Mass-filter your bugmail for this message: introspection20150207 ]