glib/gutf8.c
@@ -1595,7 +1595,7 @@ fast_validate_len (const char *str,
 
 /**
  * g_utf8_validate:
- * @str: a pointer to character data
+ * @str: (array length=max_len) (element-type guint8): a pointer to character data
  * @max_len: max bytes to validate, or -1 to go until NUL
  * @end: (allow-none) (out): return location for end of valid data
  * 
